  * debian/control: also add inetutils-ping to the dependencies for
    isc-dhcp-client on hurd (closes: #648140)
  * Convert to 3.0 (quilt) source format:
    - debian/control: remove build-dep on dpatch
    - debian/rules: stop including dpatch.make
    - debian/rules: remove dpatch-related target dependencies
    - convert patches from dpatch to pure quilt
    - remove debian/README.source

 -- Andrew Pollock <apollock@debian.org>  Sun, 08 Jan 2012 14:04:44 -0800

isc-dhcp (4.2.2-2) unstable; urgency=low

  * debian/rules: use dpkg-buildflags to set CFLAGS, and export CFLAGS (closes:
    #643470)
  * debian/dhclient.conf: revert hostname setting behaviour to something
    equivalent to what upstream ships to avoid surprising people with unwanted
    hostname changes when changing networks (closes: #648676)
  * debian/dhclient-script.kfreebsd: apply patch from Robert Millan to resync
    dhclient-script with FreeBSD version (closes: #645502)
  * debian/control: add inetutils-ping to the dependencies for isc-dhcp-client
    on kfreebsd (closes: #648140)
  * Updated German debconf template translation (closes: #641843)
  * added harding-wrapper to build dependencies and invoke it in debian/rules
    (closes: #611192)

 -- Andrew Pollock <apollock@debian.org>  Sat, 19 Nov 2011 21:37:24 -0800

isc-dhcp (4.2.2-1) unstable; urgency=low

  * New upstream release, includes security fixes for CVE-2011-2748 and
    CVE-2011-2749 (closes: #638404)
  * Remove obsolete patches, refit remaining patches
  * Remove LDAP patch, it's finally upstream now (yay!)
  * debian/rules: adjust double build for the non-existence of the LDAP patch
  * debian/isc-dhcp-server-ldap.docs: update for new location of documentation
  * debian/rules: added build-arch and build-indep targets
  * debian/rules: applied patch from Kees Cook to call dh_link (closes: #614992)
  * debian/dhclient-script.linux: applied patch from Colin Watson to make